--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "nft-marketplace",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.4.1",
-    "@usedapp/core": "^0.9.0",
-    "axios": "^0.25.0",
-    "hardhat": "^2.8.2",
-    "next": "12.0.7",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "@types/node": "17.0.8",
-    "@types/react": "17.0.38",
-    "autoprefixer": "^10.4.2",
-    "chai": "^4.2.0",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.7",
-    "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.5.3",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15",
-    "typescript": "4.5.4"
-  }
+    "name": "nft-marketplace",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "npx hardhat compile && next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@openzeppelin/contracts": "^4.4.1",
+        "@usedapp/core": "^0.9.0",
+        "axios": "^0.25.0",
+        "hardhat": "^2.8.2",
+        "next": "12.0.7",
+        "react": "17.0.2",
+        "react-dom": "17.0.2"
+    },
+    "devDependencies": {
+        "@nomiclabs/hardhat-ethers": "^2.0.0",
+        "@nomiclabs/hardhat-waffle": "^2.0.0",
+        "@types/node": "17.0.8",
+        "@types/react": "17.0.38",
+        "autoprefixer": "^10.4.2",
+        "chai": "^4.2.0",
+        "eslint": "8.6.0",
+        "eslint-config-next": "12.0.7",
+        "ethereum-waffle": "^3.0.0",
+        "ethers": "^5.5.3",
+        "postcss": "^8.4.5",
+        "tailwindcss": "^3.0.15",
+        "typescript": "4.5.4"
+    }
 }
