--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@openzeppelin/contracts": "^4.4.1",
         "@usedapp/core": "^0.9.0",
         "axios": "^0.25.0",
+        "dotenv": "^14.2.0",
         "hardhat": "^2.8.2",
         "next": "12.0.7",
         "react": "17.0.2",
