--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "hardhat": "^2.8.2",
         "next": "12.0.7",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "recoil": "^0.5.2"
     },
     "devDependencies": {
         "@nomiclabs/hardhat-ethers": "^2.0.0",
